implemented jwt auth on backend
